# pyloid-sveltekit-boilerplate

./: .flake8  .gitignore  .prettierrc  README.md  build.py  build_config.json  package-lock.json  package.json  pyproject.toml  run.py  svelte.config.js  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
scripts/: replaceAssets.js  replaceAssets.ts
src-pyloid/: main.py
src-pyloid/bridge/: url.py
src/lib/components/: Anchor.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/test/hello/: +page.svelte
src_pyloid/: main.py  server.py
src_pyloid/bridge/: __init__.py  url.py
src_pyloid/functions/: port.py
