[project]
name = "pyloid-sveltekit-boilerplate-main"
version = "0.1.0"
description = ""
authors = [
    { name = "baseplate-admin", email = "61817579+baseplate-admin@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.13,<3.14"

[tool.poe.tasks]
dev = "python ./src-pyloid/main.py"
build = "python ./build.py"

[tool.black]
line-length = 92
target-version = ["py36", "py37", "py38"]
skip-string-normalization = true

[tool.pyright]
venvPath = "./"
venv = "venv-pyloid"
pythonVersion = "3.13"
