[project]
name = ""
version = "0.0.1"
requires-python = ">=3.9,<3.14"
dependencies = [
    "pyloid>=0.20.1,<0.21",
    "pyinstaller>=6.11.1,<7",
]

[dependency-groups]
dev = [
    "poethepoet>=0.32.1,<0.33",
    "black>=24.10.0,<25",
    "flake8>=7.1.1,<8",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poe.tasks]
dev = "python ./run.py"
build = "python ./build.py"
format = "black ./"
lint = "flake8 ./"

[tool.black]
line-length = 92
target-version = ["py36", "py37", "py38"]
skip-string-normalization = true

[tool.pyright]
venvPath = "./"
venv = ".venv"
pythonVersion = "3.13"
